fixing overlapping issue - https://github.com/gkushang/cucumber-html-reporter/issues/69 (#78)

--- a/templates/_common/style.css
+++ b/templates/_common/style.css
@@ -144,10 +144,6 @@ table.arguments {
     padding: 2% 0 2% 0;
 }
 
-.scenarioTitle {
-    width: 80%
-}
-
 .description {
     background-color: white;
     border-color: white;
